# PhotoSimilarity

./: CMakeLists.txt
src/: main.cpp
